Refactor package structure, enhance logging, and add CORS configuration