@@ -8,10 +8,12 @@ import com.trendythread.app.services.UserService;
 import org.modelmapper.ModelMapper;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
+import lombok.extern.slf4j.Slf4j;
 
 import java.util.List;
 
 @Service
+@Slf4j
 public class UserServiceImpl implements UserService {
 
     @Autowired
@@ -22,13 +24,17 @@ public class UserServiceImpl implements UserService {
 
     @Override
     public UserDto createUser(UserDto userDto) {
+        log.info("createUser - request received: userDto={}", userDto);
         User user = this.dtoToUser(userDto);
         User savedUser = this.userRepository.save(user);
-        return this.userToDto(savedUser);
+        UserDto result = this.userToDto(savedUser);
+        log.info("createUser - user created: id={}", result.getId());
+        return result;
     }
 
     @Override
     public UserDto updateByUserId(UserDto userDto, Integer id) {
+        log.info("updateByUserId - request received: id={}, userDto={}", id, userDto);
         User updatedUser = this.userRepository.findById(id)
                 .orElseThrow(() -> new ResourceNotFoundException("User", "id", id));
         updatedUser.setName(userDto.getName());
@@ -38,51 +44,45 @@ public class UserServiceImpl implements UserService {
 
         this.userRepository.save(updatedUser);
 
-        return this.userToDto(updatedUser);
+        UserDto result = this.userToDto(updatedUser);
+        log.info("updateByUserId - update successful: id={}", id);
+        return result;
     }
 
     @Override
     public UserDto findByUserId(Integer userId) {
+        log.info("findByUserId - request received: id={}", userId);
         User user = this.userRepository.findById(userId)
                 .orElseThrow(() -> new ResourceNotFoundException("User", "id", userId));
 
-        return this.userToDto(user);
+        UserDto result = this.userToDto(user);
+        log.debug("findByUserId - fetched user: {}", result);
+        return result;
     }
 
     @Override
     public List<UserDto> fetchAllUsers() {
+        log.info("fetchAllUsers - request received");
         List<User> listOfUsers = this.userRepository.findAll();
-//        List<UserDto> userDtoList = listOfUsers.stream().map(user ->
-//                this.userToDto(user)
-//        ).collect(Collectors.toList());
-//        return userDtoList;
-        return listOfUsers.stream().map(this::userToDto).toList();
+        List<UserDto> dtoList = listOfUsers.stream().map(this::userToDto).toList();
+        log.debug("fetchAllUsers - fetched {} users", dtoList.size());
+        return dtoList;
     }
 
     @Override
     public void fetchByUserId(Integer id) {
+        log.info("fetchByUserId (delete) - request received: id={}", id);
         User user = this.userRepository.findById(id)
                 .orElseThrow(() -> new ResourceNotFoundException("User", "Id", id));
         this.userRepository.delete(user);
+        log.info("fetchByUserId (delete) - deleted user id={}", id);
     }
 
     private User dtoToUser(UserDto userDto) {
-//        user.setUserId(userDto.getId());
-//        user.setName(userDto.getName());
-//        user.setEmail(userDto.getEmail());
-//        user.setPassword(userDto.getPassword());
-//        user.setAbout(userDto.getAbout());
-
         return this.modelMapper.map(userDto, User.class);
     }
 
     private UserDto userToDto(User user) {
-//        UserDto userDto = new UserDto();
-//        userDto.setId(user.getUserId());
-//        userDto.setName(user.getName());
-//        userDto.setEmail(user.getEmail());
-//        userDto.setPassword(user.getPassword());
-//        userDto.setAbout(user.getAbout());
         return this.modelMapper.map(user, UserDto.class);
     }
 
